; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/syscons/blank/extr_blank_saver.c_blank_saver.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/syscons/blank/extr_blank_saver.c_blank_saver.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@V_DISPLAY_BLANK = common dso_local global i32 0, align 4
@V_DISPLAY_ON = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @blank_saver to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @blank_saver(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32*, i32** %3, align 8
  %6 = load i32, i32* %4, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %10

8:                                                ; preds = %2
  %9 = load i32, i32* @V_DISPLAY_BLANK, align 4
  br label %12

10:                                               ; preds = %2
  %11 = load i32, i32* @V_DISPLAY_ON, align 4
  br label %12

12:                                               ; preds = %10, %8
  %13 = phi i32 [ %9, %8 ], [ %11, %10 ]
  %14 = call i32 @vidd_blank_display(i32* %5, i32 %13)
  ret i32 0
}

declare dso_local i32 @vidd_blank_display(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
